syntax = "proto3";

package order;


option go_package = ".; orderpb";




service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    // rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse);
    rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
    rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}




message Customer {
    int64 id = 1;
    string name = 2;
}

message OrderItem {
    int32 product_id = 1;
    int32 quantity = 2;
    double price = 3;
}


message Order {
    int32 order_id = 1;
    Customer customer = 2;
    repeated OrderItem items = 3;
    string status = 4;
}


message CreateOrderRequest{
    Customer customer = 1;
    repeated OrderItem order_item = 2;
}

message CreateOrderResponse{
    Order order = 1;
}


message ListOrdersRequest {} // Empty request

message ListOrdersResponse {
    repeated Order orders = 1;
}


message GetOrderRequest{
    int32 order_id = 1;
}

message GetOrderResponse{
    Order order = 1;
}

message DeleteOrderRequest{
    int32 order_id = 1;
}

message DeleteOrderResponse{
    Order order = 1;
    string message = 2;
}



